# Trigo

./: .gitignore  Board.java  README.md  Triangle.java  TriangleGrid.java  board.html  canvas.html  client.go  cmd.go  db.go  games.txt  generateTrainingData.js  hub.go  main.go  screenboard.js  server.js  style.css  trigolib.js
cpp/Trigo/: CMakeLists.txt
cpp/Trigo/src/: CMakeLists.txt  board.cpp  diagramitem.cpp  diagramitem.h  diagramscene.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.cpp  newgamedialog.ui  screenboard.cpp  screenboard.h  screentriangle.cpp  triangle.cpp  triangle.h  trianglegrid.cpp  trianglegrid.h  util.cpp
cpp/TrigoTrain/: CMakeLists.txt  trainingData.txt
cpp/TrigoTrain/src/: CMakeLists.txt  diagramscene.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.h  screenboard.cpp  screenboard.h  screentriangle.h  sharktrainer.cpp  sharktrainer.h
cpp/tests/: CMakeLists.txt  boardtests.cpp  trianglegridtests.cpp  triangletests.cpp
cpp/trigolib/: CMakeLists.txt  board.cpp  board.h  triangle.cpp  trianglegrid.cpp  trianglegrid.h  util.h
data/: simulations.txt
hexago/: canvas.html  hexago_board.js  hexago_game.js
html/: about.html  board.html  chatboard.html  contact.html
java/: Board.java  TriangleGrid.java
javascript/: screenboard.js  trigolib.js
stuff/: ip.go
stuff/hexago/: hexago_core.js
templates/: about.gohtml  about.html.template  account.gohtml  base.gohtml  board.gohtml  board.html.template  board.template  chat.header.template  chat.html.template  contact.gohtml  contact.html.template  footer.template  game.gohtml  home.gohtml  lobby.gohtml  templates.gohtml
